force-app/main/default/objects/Opportunity/fields/Additional_Monitoring_Contact__c.field-meta.xml
<CustomField>
    <fullName>Additional_Monitoring_Contact__c</fullName>
    <label>Additional Monitoring Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amy Campolongo</fullName>
            </value>
            <value>
                <fullName>Les Lopez</fullName>
            </value>
            <value>
                <fullName>Gracie Ocock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>