force-app/main/default/objects/Opportunity/fields/Additional_Monitoring_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Additional_Monitoring_Follow_Up_Date__c</fullName>
    <label>Additional Monitoring Follow-Up Date</label>
    <type>Date</type>
</CustomField>