force-app/main/default/objects/Opportunity/fields/Additional_Monitoring_Reason__c.field-meta.xml
<CustomField>
    <fullName>Additional_Monitoring_Reason__c</fullName>
    <label>Additional Monitoring Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arrival Check-in</fullName>
            </value>
            <value>
                <fullName>Billing &amp; Invoice</fullName>
            </value>
            <value>
                <fullName>CCA Follow up</fullName>
            </value>
            <value>
                <fullName>Change of Host School Request</fullName>
            </value>
            <value>
                <fullName>Ephone Call</fullName>
            </value>
            <value>
                <fullName>Flight Information</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>J-2 Questions</fullName>
            </value>
            <value>
                <fullName>Placement Update</fullName>
            </value>
            <value>
                <fullName>Program Compliance</fullName>
            </value>
            <value>
                <fullName>Program Extension</fullName>
            </value>
            <value>
                <fullName>Program Renewal</fullName>
            </value>
            <value>
                <fullName>Program Shortening</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
                <label>Seeking Employment</label>
            </value>
            <value>
                <fullName>SEVIS Update</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Travel Authorization</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Well-Being</fullName>
            </value>
            <value>
                <fullName>Work Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>