force-app/main/default/objects/Opportunity/fields/Additional_Monitoring_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Additional_Monitoring_Start_Date__c</fullName>
    <label>Additional Monitoring Start Date</label>
    <type>Date</type>
</CustomField>