force-app/main/default/objects/Opportunity/fields/Application_Verified__c.field-meta.xml
<CustomField>
    <fullName>Application_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applicant confirmed all information entered is corrret and honest.</description>
    <label>Application Verified</label>
    <type>Checkbox</type>
</CustomField>