force-app/main/default/objects/Opportunity/fields/Current_Partner_Linked_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Current_Partner_Linked_Opportunities__c</fullName>
    <formula>CASESAFEID( Sending_Partner__r.Id ) =  $User.Account_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Partner Linked Opportunities</label>
    <type>Checkbox</type>
</CustomField>