force-app/main/default/objects/Opportunity/fields/isProofOfFundsUploaded__c.field-meta.xml
<CustomField>
    <fullName>isProofOfFundsUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Handler for FIle Uploads via the Universal App. Does not represent if this file is currently available.</description>
    <label>Proof of Funds Uploaded</label>
    <type>Checkbox</type>
</CustomField>