force-app/main/default/objects/Opportunity/fields/isProofOfRelationshipUploaded__c.field-meta.xml
<CustomField>
    <fullName>isProofOfRelationshipUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Handler for FIle Uploads via the Universal App. Does not represent if this file is currently available.</description>
    <label>Proof of Relationship Uploaded</label>
    <type>Checkbox</type>
</CustomField>