force-app/main/default/objects/Opportunity/fields/Monthly_Check_In_Last_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Check_In_Last_Recieved__c</fullName>
    <formula>DATEVALUE(Monthly_check_in_date__c)</formula>
    <label>Monthly Check In Last Recieved</label>
    <type>Date</type>
</CustomField>