force-app/main/default/objects/Opportunity/fields/Monthly_Check_In_Last_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Check_In_Last_Reviewed_Date__c</fullName>
    <label>Monthly Check In Last Reviewed Date</label>
    <type>Date</type>
</CustomField>