force-app/main/default/objects/Opportunity/fields/TC_Signed_FullName__c.field-meta.xml
<CustomField>
    <fullName>TC_Signed_FullName__c</fullName>
    <description>Name the user entered when signing the Teacher Terms &amp; Conditions</description>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>