force-app/main/default/objects/Opportunity/listViews/Partners_My_Participants.listView-meta.xml
<ListView>
    <fullName>Partners_My_Participants</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Partner_Linked_Opportunities__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Partners - My Participants</label>
</ListView>